Fix: ukrainian bookcase title was too long

--- a/app/less/bookcase.less
+++ b/app/less/bookcase.less
@@ -459,7 +459,7 @@
 }
 
 .bar.searchbar .title {
-  transform: translateX(-100%);
+  transform: translateX(-130%);
   transition: transform 0.25s ease;
 }
 
